ingress/nginx/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-controller
  namespace: ingress-nginx
spec:
  loadBalancerIP: 10.0.3.10
  allocateLoadBalancerNodePorts: false
