ingress/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  ports:
  - name: http
    port: 80
    targetPort: http
    appProtocol: http
  - name: https
    port: 443
    targetPort: https
    appProtocol: https
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
